--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/nunito": "^5.0.18",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.12"
